# supervisor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  package.xml
res/conf/: caller_table.json  caller_table.yml  caller_table1.json  caller_table_new.json  garbage_ui_callertable.csv
src/: CMakeLists.txt
src/supervisor/: CMakeLists.txt  Supervisor.cpp  Supervisor.hpp
src/supervisord/: CMakeLists.txt  QStringJson.hpp  Supervisord.cpp  Supervisord.hpp
test/: CMakeLists.txt
test/ftxui/: CMakeLists.txt  test_ftxui.cpp
test/parse_env/: CMakeLists.txt  parse_env.cpp
test/process/: CMakeLists.txt  process.cpp
