<?xml version="1.0"?>
<package format="2">
  <name>supervisord</name>
  <version>0.0.0</version>
  <description>supervisord</description>
  <maintainer email="jiang770882022@hotmail.com">jiang.wenqiang</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
